--- a/docs/crunchy-proxy-dev-guide.asciidoc
+++ b/docs/crunchy-proxy-dev-guide.asciidoc
@@ -1,7 +1,7 @@
 = Design Guide - Crunchy Proxy
 Crunchy Data Solutions, Inc.
 v0.0.1, {docdate}
-image::crunchy_logo.png
+image::crunchy_logo.png?raw=true[]
 
 == Building
 
