--- a/README.asciidoc
+++ b/README.asciidoc
@@ -10,7 +10,7 @@ client application would connect to the proxy which appears as any other
 PostgreSQL database connection.  The proxy would accept the inbound client
 requests, and route them to an appropriate PostgreSQL cluster member.
 
-image::https://github.com/CrunchyData/crunchy-proxy/blob/master/docs/proxy-diagram.svg
+image::https://cdn.rawgit.com/CrunchyData/crunchy-proxy/master/docs/proxy-diagram.svg
 
 To the PostgreSQL server, the proxy is transparent and appears as any other
 PostgreSQL client would appear.  Within the proxy, various capabilities are
